objects/ssot__ImpactStrategyAssignment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Impact Strategy Assignment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImpactStrategyId__c</fullName>
        <label>Impact Strategy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutcomeId__c</fullName>
        <label>Outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668774288_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ImpactStrategyAssignment_OutcomeId_m_rel</label>
        <referenceTo>ssot__OutcomeIntent__dlm</referenceTo>
        <relationshipLabel>ImpactStrategyAssignment_OutcomeId_m_rel</relationshipLabel>
        <relationshipName>rel_1716668774288_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668781375_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ImpactStrategyAssignment_ImpactStrat_rel</label>
        <referenceTo>ssot__ImpactStrategy__dlm</referenceTo>
        <relationshipLabel>ImpactStrategyAssignment_ImpactStrat_rel</relationshipLabel>
        <relationshipName>rel_1716668781375_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>